@@ -96,6 +96,8 @@ Release 2.2
 
 * Made all renderer resolvation methods public to be accessible from outside compilers (also added generic parameters)
 
+* Introduced RendererRegistry interface implemented by Engine
+
 * Reverted decision that all renderers and get the template context as an additional parameter - now without context again
 
-* Introduced RendererRegistry interface implemented by Engine
+* Renamed test package "realLive" to "realLife"
